# test

./: manage.py  pyproject.toml  setup.cfg
front/: package.json  webpack.config.js
front/assets/fonts/signika/: font.css
front/assets/js/: app.js  login_page.js
front/assets/scss/: _custom.scss  _generics.scss  _mixins.scss  _navbar.scss  _page40x.scss  _page_connexion.scss  main.scss
front/static/: app.css  app.js  vendor.js
scripts/: anonymise.py
static/permanents/: site.webmanifest
