[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "wagtail>=6.3,<6.4",
    "huey>=2.5.2",
    "django-axes[ipware]>=7.0.1",
    "xlsxwriter>=3.2.0",
    "django-environ>=0.11.2",
    "sentry-sdk>=2.19.2",
    "django-auth-ldap>=4.8.0",
    "django-widget-tweaks>=1.5.0",
    "django-hijack>=3.4.5",
    "wagtail-modeladmin>=1.0.0",
    "gunicorn>=23.0.0",
    "django-extensions>=4.1",
]

[dependency-groups]
dev = [
    "faker>=37.11.0",
    "ipython>=8.31.0",
    "python-lsp-server[all]>=1.12.0",
    "tqdm>=4.67.1",
]
